updated ACO & GA to support blockeages; added A* search algorithm